# acture

./: .gitignore  AGENTS.md  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vitest.config.ts
.changeset/: acture-capture.md  ai-vercel-zod4-jsonschema.md  autoform-type-bypass-soft.md  config.json  core-positioning-tier-warnings-extraction.md  dom-interceptor-onmalformed.md  dotted-tool-names.md  e2e-playwright-macros.md  undo-runtime-guard.md  v1-13-python-companion.md
.github/workflows/: ci.yml  release.yml
docs/: ai-codemod-recipe.md  command_dispatch_journal_article.md  core-review-reflection.md  escalations.md  hand-written-command-sequence.md  hand-written-python-client.md  hand-written-registry.md  hand-written-test-property.md  hand-written-undo.md  implementation_plan.md  next_session.md  next_session_phase_1.md  parameterized_command_palette_guide.md  phase-0-reflection.md  phase-1-reflection.md  phase-4-reflection.md  positioning.md  redesign_takeaways.md  reference_notes.md  roadmap.md  v1_1-reflection.md  v1_10-reflection.md  v1_13-reflection.md  v1_2-reflection.md  v1_3-reflection.md  v1_4-reflection.md  v1_7-reflection.md  v1_8-reflection.md  v1_9-reflection.md  v1_plan.md  wrapex_carryover.md
docs/backlog/: codemods-polish-and-tier-mirror.md
docs/research/: acture_research_1 -- Command-Dispatch Patterns Across Linear, Notion, Obsidian, Slack, and Raycast.md  acture_research_2 -- The Qualitative UX of Parameterized Commands in Shipped Command Palettes.md  acture_research_6 -- Cross-Language Story for acture (TypeScript and Python).md  (+4 more)
python/: README.md  pyproject.toml
python/acture/: __init__.py  client.py  transport.py  types.py
python/tests/: conftest.py  test_client.py  test_transport.py
scripts/: sync-python-version.mjs
(+27 files in other folders)
